--- a/web-fenix/src/main/webapp/index.xhtml
+++ b/web-fenix/src/main/webapp/index.xhtml
@@ -11,7 +11,8 @@
 
 	<ui:define name="contenido">
 	   <div>
-	   		<h1>Bienvenido al banco Fenix</h1> 
+	   		<h1>Bienvenido al banco Fenix</h1>
+	   		<p:outputLabel value="#{seguridadBean.usuario.nombres} #{seguridadBean.usuario.apellidos}" /> 
 	   </div> 
 	   <h:form>
 </h:form>
