--- a/web-fenix/src/main/webapp/WEB-INF/template.xhtml
+++ b/web-fenix/src/main/webapp/WEB-INF/template.xhtml
@@ -60,14 +60,27 @@
 				<h:form>
 					<h:panelGrid columns="2">
 						<f:facet name="header">INGRESAR</f:facet>
-						<p:outputLabel value="Login" />
-						<p:inputText value="#{seguridadBean.usuario.cedula}" />
+						<p:outputLabel value="Cédula" />
+						<p:inputText value="#{seguridadBean.usuario.cedula}"
+							onkeypress="if(event.which &lt; 48 || event.which &gt; 57) return false;"
+							maxlength="10" required="true"
+							requiredMessage="Por favor ingresa tu número de cédula" />
 						<p:outputLabel value="Clave" />
 						<p:password value="#{seguridadBean.usuario.contrasenia}" />
 
-						<br />
+						<p:outputLabel value="" />
 						<p:commandButton value="Aceptar" icon="fa fa-sign-in-alt"
 							ajax="false" action="#{seguridadBean.login}" />
+
+
+						<p:outputLabel value="" />
+						<p:outputLabel value="" />
+
+						<p:outputLabel for="olvideContrasenia" value="" />
+						<p:commandLink id="olvideContrasenia" action="#"
+							style="margin-right:20px;">
+							<h:outputText value="Olvidé Contraseña" />
+						</p:commandLink>
 					</h:panelGrid>
 					<p:growl id="messages" showDetail="true" />
 				</h:form>
@@ -77,7 +90,6 @@
 		<h:panelGroup rendered="#{seguridadBean.autenticado}">
 			<ui:insert name="menu">
 				<h:form>
-
 					<p:menubar>
 						<p:submenu label="Clientes" icon="fa fa-angle-right"
 							rendered="#{seguridadBean.loginEmpleado}">
@@ -106,9 +118,9 @@
 						</p:submenu>
 
 
-						<p:submenu label="Asesoría" icon="fa fa-angle-right"
+						<p:submenu label="Prestamos" icon="fa fa-angle-right"
 							rendered="#{seguridadBean.loginCliente}">
-							<p:menuitem value="Solicitar" url="/listaPrestamosCliente.xhtml" />
+							<p:menuitem value="Lista" url="/listaPrestamosCliente.xhtml" />
 						</p:submenu>
 
 						<p:submenu label="Asesoría" icon="fa fa-angle-right"
@@ -117,6 +129,8 @@
 						</p:submenu>
 
 						<f:facet name="options">
+							<p:outputLabel
+								value="#{seguridadBean.usuario.nombres} #{seguridadBean.usuario.apellidos} 	" />
 							<p:commandButton action="#{seguridadBean.cerrarSesion}"
 								ajax="false" value="Salir" icon="fa fa-sign-out-alt" />
 						</f:facet>
@@ -135,8 +149,7 @@
 
 
 	<div id="footer" align="center">
-		<h3>Fenix Banco</h3>
-		<h6>Todos los derechos reservados</h6>
+		<h6>Fenix Banco | Todos los derechos reservados</h6>
 	</div>
 
 </h:body>
