--- a/web-fenix/src/main/webapp/WEB-INF/template.xhtml
+++ b/web-fenix/src/main/webapp/WEB-INF/template.xhtml
@@ -9,6 +9,7 @@
 	<title><ui:insert name="title">Banco Fenix</ui:insert></title>
 	<link rel="stylesheet"
 		href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script>
 		PrimeFaces.locales['co'] = {
 			closeText : 'Cerrar',
@@ -49,7 +50,7 @@
 
 		<div id="header">
 			<ui:insert name="header">
-				<h:graphicImage url="#{resource['securityheaderimg.png']}" />
+				<h:graphicImage url="#{resource['fenix_header1.jpg']}" height="300" />
 			</ui:insert>
 		</div>
 	</div>
@@ -126,13 +127,14 @@
 						<p:submenu label="Asesoría" icon="fa fa-angle-right"
 							rendered="#{seguridadBean.loginCliente}">
 							<p:menuitem value="Solicitar" url="/asesoriaCliente.xhtml" />
+							<p:menuitem value="Lista" url="/listaAsesoriasCliente.xhtml" />
 						</p:submenu>
 
 						<f:facet name="options">
-							<p:outputLabel
-								value="#{seguridadBean.usuario.nombres} #{seguridadBean.usuario.apellidos} 	" />
-							<p:commandButton action="#{seguridadBean.cerrarSesion}"
-								ajax="false" value="Salir" icon="fa fa-sign-out-alt" />
+						<i class="far fa-user"></i>
+						<span style="margin:1px 20px 1px 1px; text-transform: uppercase;">#{seguridadBean.usuario.nombres} #{seguridadBean.usuario.apellidos}</span>
+							<p:commandButton styleClass="GreenButton" action="#{seguridadBean.cerrarSesion}"
+								ajax="false" value="Salir" icon="fa fa-times-circle" />
 						</f:facet>
 					</p:menubar>
 					<p:growl id="messages" showDetail="true" />
