--- a/web-fenix/src/main/webapp/listaClientes.xhtml
+++ b/web-fenix/src/main/webapp/listaClientes.xhtml
@@ -16,102 +16,112 @@
 	<ui:define name="contenido">
 		<br />
 		<h:form id="listaClientes">
-			
-				<p:dataTable id="tablaClientes" value="#{clienteBean1.clientes}"
-					var="cliente">
-					<f:facet name="header">Lista de clientes</f:facet>
-					<p:column headerText="Cedula">
-						<h:outputText value="#{cliente.cedula}" />
-					</p:column>
-					<p:column headerText="Nombre">
-						<h:outputText value="#{cliente.nombres} #{cliente.apellidos}" />
-					</p:column>
-					<p:column headerText="Correo">
-						<h:outputText value="#{cliente.correo}" />
-					</p:column>
-					<p:column headerText="Estado">
-						<h:outputText value="#{cliente.estado}" />
-					</p:column>
-					<p:column style="width:24px">
-						<p:commandLink update=":listaClientes:detalleCliente"
-							oncomplete="PF('documentDialog').show()" icon="fa fa-eye"
-							title="Ver Detalles">
-							<i class="fas fa-eye"></i>
-							<f:setPropertyActionListener value="#{cliente}"
-								target="#{clienteBean1.cliente}" />
-						</p:commandLink>
-					</p:column>
-				</p:dataTable>
 
-				<p:dialog id="dialog" header="Detalles cliente" showEffect="fade"
-					widgetVar="documentDialog" modal="true" resizable="false">
-					<p:outputPanel id="detalleCliente">
-						<p:panelGrid columns="2" cellpadding="4"
-							rendered="#{not empty clienteBean1.cliente}">
-							<h:outputLabel for="cedula" value="Cedula: " />
-							<h:outputText id="cedula" value="#{clienteBean1.cliente.cedula}"
-								style="font-weight:bold" />
+			<p:dataTable id="tablaClientes" value="#{clienteBean1.clientes}"
+				var="cliente">
+				<f:facet name="header">Lista de clientes</f:facet>
+				<p:column headerText="Cedula">
+					<h:outputText value="#{cliente.cedula}" />
+				</p:column>
+				<p:column headerText="Nombre">
+					<h:outputText value="#{cliente.nombres} #{cliente.apellidos}" />
+				</p:column>
+				<p:column headerText="Correo">
+					<h:outputText value="#{cliente.correo}" />
+				</p:column>
+				<p:column headerText="Estado">
+					<h:outputText value="#{cliente.estado}" />
+				</p:column>
+				<p:column style="width:24px">
+					<p:commandLink update=":listaClientes:detalleCliente"
+						oncomplete="PF('documentDialog').show()" icon="fa fa-eye"
+						title="Ver Detalles">
+						<i class="fas fa-eye"></i>
+						<f:setPropertyActionListener value="#{cliente}"
+							target="#{clienteBean1.cliente}" />
+					</p:commandLink>
+				</p:column>
+			</p:dataTable>
 
-							<h:outputLabel for="nombres" value="Nombre: " />
-							<h:outputText id="nombres"
-								value="#{clienteBean1.cliente.nombres}" style="font-weight:bold" />
+			<p:dialog id="dialog" header="Detalles cliente" showEffect="fade"
+				hideEffect="explode" closeOnEscape="true" widgetVar="documentDialog"
+				modal="true" resizable="false">
+				<p:outputPanel id="detalleCliente">
+					<p:panelGrid columns="2" cellpadding="4"
+						rendered="#{not empty clienteBean1.cliente}">
+						<h:outputLabel for="cedula" value="Cedula: " />
+						<h:outputText id="cedula" value="#{clienteBean1.cliente.cedula}"
+							style="font-weight:bold" />
 
-							<h:outputLabel for="apellidos" value="Apellidos: " />
-							<h:outputText id="apellidos"
-								value="#{clienteBean1.cliente.apellidos}"
-								style="font-weight:bold" />
+						<h:outputLabel for="nombres" value="Nombre: " />
+						<h:outputText id="nombres" value="#{clienteBean1.cliente.nombres}"
+							style="font-weight:bold" />
 
-							<h:outputLabel for="correo" value="Email: " />
-							<h:outputText id="correo" value="#{clienteBean1.cliente.correo}"
-								style="font-weight:bold" />
+						<h:outputLabel for="apellidos" value="Apellidos: " />
+						<h:outputText id="apellidos"
+							value="#{clienteBean1.cliente.apellidos}"
+							style="font-weight:bold" />
 
-							<h:outputLabel for="direccion" value="Dirección: " />
-							<h:outputText id="direccion"
-								value="#{clienteBean1.cliente.direccion}"
-								style="font-weight:bold" />
+						<h:outputLabel for="correo" value="Email: " />
+						<h:outputText id="correo" value="#{clienteBean1.cliente.correo}"
+							style="font-weight:bold" />
 
-							<h:outputLabel for="fechanaci" value="Fecha Nacimiento: " />
-							<h:outputText id="fechanaci"
-								value="#{clienteBean1.cliente.fecha_nacimiento}"
-								style="font-weight:bold">
-								<f:convertDateTime pattern="yyyy-MM-dd"
-									timeZone="America/Bogota" />
-							</h:outputText>
+						<h:outputLabel for="direccion" value="Dirección: " />
+						<h:outputText id="direccion"
+							value="#{clienteBean1.cliente.direccion}"
+							style="font-weight:bold" />
 
-							<h:outputLabel for="genero" value="Género: " />
-							<h:outputText id="genero" value="#{clienteBean1.cliente.genero}"
-								style="font-weight:bold" />
+						<h:outputLabel for="fechanaci" value="Fecha Nacimiento: " />
+						<h:outputText id="fechanaci"
+							value="#{clienteBean1.cliente.fecha_nacimiento}"
+							style="font-weight:bold">
+							<f:convertDateTime pattern="yyyy-MM-dd" timeZone="America/Bogota" />
+						</h:outputText>
 
-							<h:outputLabel for="telefono" value="Telefono: " />
-							<h:outputText id="telefono"
-								value="#{clienteBean1.telefonoLista}"
-								style="font-weight:bold" />
+						<h:outputLabel for="genero" value="Género: " />
+						<h:outputText id="genero" value="#{clienteBean1.cliente.genero}"
+							style="font-weight:bold" />
 
-							<h:outputLabel for="contrasenia" value="Contraseña: " />
-							<h:outputText id="contrasenia"
-								value="#{clienteBean1.cliente.contrasenia}"
-								style="font-weight:bold" />
+						<h:outputLabel for="telefono" value="Telefono: " />
+						<h:outputText id="telefono" value="#{clienteBean1.telefonoLista}"
+							style="font-weight:bold" />
 
-							<f:facet name="footer">
-								<p:commandButton value="Modificar" ajax="false"
-									action="/modificarCliente" />
-							</f:facet>
-							
-							<f:facet name="footer">
-								<p:commandButton removeFrom="#{clienteBean1.clientes}" update=":listaClientes:tablaClientes" value="Eliminar" ajax="false"
-									action="#{clienteBean1.eliminarCliente}" />
-							</f:facet>
-							
-							<f:facet name="footer">
-								<p:commandButton value="Prestar" ajax="false"
-									action="/registrarPrestamo" />
-							</f:facet>							
+						<h:outputLabel for="contrasenia" value="Contraseña: " />
+						<h:outputText id="contrasenia"
+							value="#{clienteBean1.cliente.contrasenia}"
+							style="font-weight:bold" />
 
-						</p:panelGrid>
+						<h:outputLabel for="bien" value="Bien Raiz: " />
+						<h:outputText id="bien"
+							value="#{clienteBean1.cliente.bienRaiz}"
+							style="font-weight:bold" />
 
-					</p:outputPanel>
-				</p:dialog>
-	
+						<f:facet name="footer">
+							<p:commandButton value="Modificar" ajax="false"
+								action="/modificarCliente" />
+						</f:facet>
+
+						<f:facet name="footer">
+							<p:commandButton removeFrom="#{clienteBean1.clientes}"
+								update=":listaClientes:tablaClientes" value="Eliminar"
+								ajax="false" action="#{clienteBean1.eliminarCliente}" />
+						</f:facet>
+
+						<f:facet name="footer">
+							<p:commandButton value="Prestar" ajax="false"
+								action="/registrarPrestamo" />
+						</f:facet>
+
+						<f:facet name="footer">
+							<p:commandButton value="Bien Raiz" ajax="false"
+								action="/registrarBienRaiz" />
+						</f:facet>
+
+					</p:panelGrid>
+
+				</p:outputPanel>
+			</p:dialog>
+
 
 		</h:form>
 
